syntax = "proto3";

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
    double base_rate = 4;
    double base_rate_amount = 5;
    double adj1_rate = 6;
    double adj1_rate_amount = 7;
    double adj2_rate = 8;
    double adj2_rate_amount = 9;
    double adj3_rate = 10;
    double adj3_rate_amount = 11;
    double adj4_rate = 12;
    double adj4_rate_amount = 13;
    double adj5_rate = 14;
    double adj5_rate_amount = 15;
    double adj6_rate = 16;
    double adj6_rate_amount = 17;
}

message AccountWithCashflows {
    int64 as_on_month = 1;
    string account_id = 2;
    string currency = 3;
    double balance_ccy = 4;
    double balance_hcy = 5;
    double int_rate = 6;
    double int_amt_ccy = 7;
    double int_amt_hcy = 8;
    string ftp_method =9;
    string base_rate_curve_id = 10;
    string rate_flag = 11;
    string adj_code_1 = 12;
    string adj_code_2 = 13;
    string adj_code_3 = 14;
    string adj_code_4 = 15;
    string adj_code_5 = 16;
    string adj_code_6 = 17;
    int64 val_dt = 18;
    int64 open_dt = 19;
    int64 mat_dt = 20;
    int64 lst_repricing_dt = 21;
    string rep_freq = 22;
    double cust_agg_bal = 23;
    string day_count_basis = 24;
    double base_rate = 25;
    double adj_rate_1 = 26;
    double adj_rate_2 = 27;
    double adj_rate_3 = 28;
    double adj_rate_4 = 29;
    double adj_rate_5 = 30;
    double adj_rate_6 = 31;
    double ftp_rate = 32;
    double lock_spread = 33;
    double ftp_amt_ccy = 34;
    double ftp_amt_hcy = 35;
    string a_or_l = 36;
    string dim1 = 37;
    string dim2 = 38;
    string dim3 = 39;
    string dim4 = 40;
    string customer_id = 41;
    int32 rl1 = 42;
    int32 rl2 = 43;
    int32 rl3 = 44;
    int64 bc_as_on_rule = 45;
    int64 tenor_start_date_rule = 46;
    int64 tenor_end_date_rule = 47;
    int64 bc_as_on_applied = 48;
    int64 tenor_start_date_applied = 49;
    int64 tenor_end_date_applied = 50;
    string gl_code = 51;
    string prod_code = 52;
    string div_code = 53;
    string mis_code_1 = 54;
    string mis_code_2 = 55;
    string mis_code_3 = 56;
    double eop_balance_ccy = 57;
    double eop_balance_hcy = 58;
    repeated Cashflow cashflows=59;
}
