syntax = "proto3";

message OneAccountView {
    int64 as_on_month = 1;
    string account_id = 2;
    string currency = 3;
    double eop_balance_ccy = 4;
    double eop_balance_hcy = 5;
    double avg_balance_ccy = 6;
    double avg_balance_hcy = 7;
    double int_rate = 8;
    double acr_int_amt_ccy = 9;
    double acr_int_amt_hcy = 10;
    string ftp_method = 11;
    int32 base_rate_curve_id = 12;
    string rate_flag = 13;
    repeated int32 adj_codes = 14;
    int64 val_dt = 15;
    int64 open_dt = 16;
    int64 mat_dt = 17;
    int64 lst_repricing_dt = 18;
    string rep_freq = 19;
    double cust_agg_bal = 20;
    string day_count_basis = 21;
    double base_rate = 22;
    repeated double adj_rates = 23;
    double ftp_rate = 24;
    double lock_spread = 25;
    double ftp_amt_ccy = 26;
    double ftp_amt_hcy = 27;
    string a_or_l = 28;
    string dim1 = 29;
    string dim2 = 30;
    string dim3 = 31;
    string dim4 = 32;
    string customer_id = 33;
    string rl1 = 34;
    string rl2 = 35;
    string rl3 = 36;
    double calc_ftp_rate = 37;
    double calc_lock_spread = 38;
    int64 bc_as_on_rule = 39;
    int64 tenor_start_date_rule = 40;
    int64 tenor_end_date_rule = 41;
    int64 bc_as_on_applied = 42;
    int64 tenor_start_date_applied = 43;
    int64 tenor_end_date_applied = 44;
    string gl_code = 45;
    string prod_code = 46;
    string div_code = 47;
    string mis_code_1 = 48;
    string mis_code_2 = 49;
    string mis_code_3 = 50;
}
